HHH-6293 avoid create unnesserary Integer object